c4prj2_input/grade.txt
Grading at Fri Aug  2 22:55:58 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:14:35: error: invalid type argument of unary ‘*’ (have ‘deck_t {aka struct deck_tag}’)
  fc->decks[index] = malloc(sizeof(*fc->decks[index]));
                                   ^
future.c: At top level:
future.c:33:1: error: unterminated comment
 /*
 ^
Compilation of future.c failed

Overall Grade: F
